--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^6.1.0",
     "react-native-video": "^4.3.1",
-    "react-navigation": "^3.0.8"
+    "react-navigation": "^3.0.8",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
